manifests/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codeshare
  labels:
    app: codeshare
